# mlops-project-template

./: .gitignore  Dockerfile.api  Dockerfile.train  Makefile  README.md  docker-compose.yml  dvc.yaml  env.example  prometheus.yml  pyproject.toml
.github/workflows/: pages.yml
configs/: drift.yaml  evaluate.yaml  preprocess.yaml  train.yaml
configs/drift/: default.yaml
configs/preprocessing/: default.yaml
docker/: train.Dockerfile
docs/: 00_project_methodology_en.md  00_project_methodology_fr.md
reports/: __init__.py
reports/drift/: __init__.py
slides/: index.html
src/api/: main.py  pyproject.toml
src/common/: pyproject.toml
src/monitoring/: detection.py  pyproject.toml
src/training/: __init__.py  evaluate.py  preprocess.py  pyproject.toml  train.py
tests/: test_data.py
