[project]
name = "mlops-project-template"
version = "0.1.0"
description = "MLOps project template with UV workspaces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.0.0",
    "hydra-core>=1.3.0",
    "pydantic>=2.0.0",
    "joblib>=1.3.0",
]

[tool.uv]
workspace = { members = ["src/*"] }
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
